data.txt
Solution.java:112: error: cannot find symbol
                JSONArray authorDataArray = authorResponse.optJSONArray("data");
                                                          ^
  symbol:   method optJSONArray(String)
  location: variable authorResponse of type JSONObject
Solution.java:113: error: cannot find symbol
                if (authorDataArray != null && authorDataArray.length() > 0) {
                                                              ^
  symbol:   method length()
  location: variable authorDataArray of type JSONArray
Solution.java:114: error: cannot find symbol
                    JSONObject authorData = authorDataArray.getJSONObject(0);
                                                           ^
  symbol:   method getJSONObject(int)
  location: variable authorDataArray of type JSONArray
Solution.java:115: error: cannot find symbol
                    String about = authorData.optString("about", null);
                                             ^
  symbol:   method optString(String,<null>)
  location: variable authorData of type JSONObject
Solution.java:131: error: cannot find symbol
                    totalPages = articlesResponse.optInt("total_pages", 1);
                                                 ^
  symbol:   method optInt(String,int)
  location: variable articlesResponse of type JSONObject
Solution.java:132: error: cannot find symbol
                    JSONArray articlesData = articlesResponse.optJSONArray("data");
                                                             ^
  symbol:   method optJSONArray(String)
  location: variable articlesResponse of type JSONObject
Solution.java:135: error: cannot find symbol
                        for (int i = 0; i < articlesData.length(); i++) {
                                                        ^
  symbol:   method length()
  location: variable articlesData of type JSONArray
Solution.java:136: error: cannot find symbol
                            JSONObject article = articlesData.getJSONObject(i);
                                                             ^
  symbol:   method getJSONObject(int)
  location: variable articlesData of type JSONArray
Solution.java:137: error: cannot find symbol
                            String title = article.optString("title", null);
                                                  ^
  symbol:   method optString(String,<null>)
  location: variable article of type JSONObject
Solution.java:138: error: cannot find symbol
                            String storyTitle = article.optString("story_title", null);
                                                       ^
  symbol:   method optString(String,<null>)
  location: variable article of type JSONObject
Solution.java:176: error: incompatible types: String cannot be converted to Map
                return new JSONObject(response.toString());
                                                       ^
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
11 errors
